# comfyUI_LLM

./: .gitignore  README.md  __init__.py  cloud_utils.py  ollama_node.py  pyproject.toml  qiniu_config.json  qiniu_config.json.example  qiniu_uploader.py  requirements.txt  string_utils.py  循环生成镜头提示词.json  提示词模板.md
.github/workflows/: publish.yml
js/: ollama_widgets.js  styles.css
node/: cloud_node.py  img_node.py  img_utils.py  ollama_node.py  online_api.py  video_split_node.py
